--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,16 +1,4 @@
 {
   "version": 2,
-  "name": "find-the-vehicles",
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/src/$1"
-    }
-  ]
+  "name": "find-the-vehicles"
 }
